squished a few bugs, changed a couple text colors for better viewing experience

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,11 +25,12 @@ body{
         ul{
           display: inline-block;
           padding-right: 1%;
-          font-size: 15px;
+          font-size: 20px;
         }
 
         a{
           text-decoration: none;
+          color: pink;
         }
 
         a:visited{
